--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,6 +1,1 @@
-h1 {
-    transition:color 0.4s;
-    &:hover {
-        color:rgb(2, 146, 146);
-    }
-}
+@import 'bootstrap/scss/bootstrap.scss';
