bootstrap自定義方法

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,1 +1,8 @@
+@import 'bootstrap/scss/functions';
+
+
+$primary: rgb(35, 81, 207);
+
+@import './variables';
+
 @import 'bootstrap/scss/bootstrap.scss';
